--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,13 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "pg-promise": "^10.5.3"
   }
 }
