--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
