--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -12,7 +12,7 @@ COPY tsconfig.json ./
 COPY tslint.json ./
 COPY nodemon.json ./
 
-RUN apk add --no-cache bash python2
+RUN apk add --no-cache python2
 # CMD npm install ; npm install -g nodemon
 
 EXPOSE 5000
