--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -2,7 +2,7 @@ FROM node:11-alpine
 
 WORKDIR /app
 
-ENV PATH /app/node_modules/.bin:$PATH
+# ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json ./
 COPY package-lock.json ./
@@ -10,6 +10,6 @@ COPY tsconfig.json ./
 COPY src ./
 COPY public ./
 
-# CMD npm install ; npm install -g nodemon
+CMD npm install -g node-pre-gyp react-scripts ; npm install --no-bin-links ; npm install -g nodemon ; nodemon
 
 EXPOSE 3000
