--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg-promise": "^10.5.3",
+    "source": "0.0.3",
     "sqlite": "^4.0.11",
     "sqlite3": "^5.0.0"
   }
