Passport and Sequelize progress

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,7 @@ DB_NAME=guidedb
 DB_PORT=5432
 DB_HOST=localhost
 
+OAUTH_CLIENT_ID: 528342677142-hiteslkd8mh6aca63rf2v2jpc0nsnuif.apps.googleusercontent.com
+OAUTH_CLIENT_SECRET: GZqkQGyqaqTCPb-0HuX1kpFh
+
 SECRET_COOKIE=HealthcareInnovation
