--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-webcam": "^5.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
