--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "better-sqlite3": "^7.1.0",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.1",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -30,8 +30,11 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg-promise": "^10.5.3",
+    "socket.io": "^2.2.0",
     "source": "0.0.3",
     "sqlite": "^4.0.11",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "twilio": "^3.34.0",
+    "utf-8-validate": "^5.0.2"
   }
 }
